implementando modelo de domínio