@@ -7,17 +7,23 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 
 @Service
 public class GameService {
 
+  private final GameRepository gameRepository;
+
+  // Implementar a injeção de dependência através do construtor para facilitar testes
     @Autowired
-    GameRepository gameRepository;
+    public GameService(GameRepository gameRepository){
+        this.gameRepository = gameRepository;
+    }
 
     public List<GameMinDTO> findAll() {
         List<Game> result = gameRepository.findAll();
-        return result.stream().map(GameMinDTO::new).toList();
+        return result.stream().map(GameMinDTO::new).collect(Collectors.toList());
     }
 
 
